--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: color|transparent|initial|inherit;
+    background: #00ffffff;
 }
 
 
@@ -27,7 +27,7 @@ body {
 .chatlogs {
     padding: 10px;
     width: 100%;
-    height: 250px;
+    height: 100%;
     overflow-x: hidden;
     overflow-y: scroll;
     /*background:rgba(200, 200, 200, .1);*/
@@ -74,7 +74,7 @@ body {
 .user-photo {
     width: 60px;
     height: 60px;
-    background: #ccc;
+    background: #FFFFFF;
     border-radius: 50%;
     overflow: hidden;
 }
@@ -112,7 +112,7 @@ body {
     flex-flow: row wrap;
     align-items: flex-start;
     margin: 0px auto 0px auto;
-    background: #6495ED;
+    background-image: url("https://image.ibb.co/eNvB0n/Banner_Crop.jpg");
     border-radius: 280px 28px 0px 0px;
 }
 
