--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 .chatbox {
     
     width: 100%;
-    height: 100%;
+    height: 800px;
     background: #ffffff;
    
     margin: 0px auto 20px auto;
@@ -112,7 +112,7 @@ body {
     flex-flow: row wrap;
     align-items: flex-start;
     margin: 0px auto 0px auto;
-    background-image: url("https://image.ibb.co/eNvB0n/Banner_Crop.jpg");
+    background-image: url("https://image.ibb.co/cpbe37/header_phy_network.png");
     border-radius: 280px 28px 0px 0px;
 }
 
